auth module, generating tokens
